WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
214066
[Apple Pay] Fix the build on Catalina internal SDKs
https://bugs.webkit.org/show_bug.cgi?id=214066
Summary
[Apple Pay] Fix the build on Catalina internal SDKs
Andy Estes
Reported
2020-07-07 19:00:40 PDT
[Apple Pay] Fix the build on Catalina internal SDKs
Attachments
Patch for EWS
(5.15 KB, patch)
2020-07-07 19:02 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2020-07-07 19:01:45 PDT
rdar://problem/65195012
Andy Estes
Comment 2
2020-07-07 19:02:56 PDT
Created
attachment 403751
[details]
Patch for EWS
EWS
Comment 3
2020-07-07 20:22:04 PDT
Committed
r264058
: <
https://trac.webkit.org/changeset/264058
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 403751
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug