[Apple Pay] Fix the build on Catalina internal SDKs https://bugs.webkit.org/show_bug.cgi?id=214066

Unreviewed build fix for the 10.15.0 Internal SDK.


Source/WebCore:

* Modules/applepay/ApplePaySetupFeature.mm:
(WebCore::ApplePaySetupFeature::supportsInstallments const):

Source/WebCore/PAL:

* pal/spi/cocoa/PassKitInstallmentsSPI.h:
* pal/spi/cocoa/PassKitSPI.h:


Canonical link: https://commits.webkit.org/226869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264058 268f45cc-cd09-0410-ab3c-d52691b4dbfc